Make part() take renderers and add filenames
Specify SubGridSpecRenderers when doing partitioning of the benchart so
user better controls how they want the partitions actually displayed.

Also, sometimes I want the filenames, so keep track of them from
loading, through the engine, to rendering in case I want to print them
out.

--- a/all.ipynb
+++ b/all.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from renderer import SubGridSpecRenderer, GridSpecRenderer, AxesRenderer, \\\n",
-    "PlotRenderer\n",
+    "PlotRenderer, render\n",
     "import os\n",
     "from benchart import BenchArt, Run\n",
     "from metadata import RunMetadata\n",
@@ -27,15 +27,32 @@
     "    all_data = extract(os.path.join(results_dir, datafile))\n",
     "    data = all_data['data']['pgbench']['progress']\n",
     "    metadata = all_data['metadata']\n",
-    "    runs.append(Run(i + 1, data, RunMetadata(flatten(metadata))))\n",
+    "    runs.append(\n",
+    "        Run(i + 1, data, RunMetadata(flatten(metadata)), os.path.join(results_dir, datafile))\n",
+    "    )\n",
     "\n",
     "normalize(runs)\n",
     "\n",
-    "\n",
     "benchart = BenchArt(runs)\n",
-    "# TODO: specify partitions and renderers together\n",
     "\n",
-    "benchart.part('benchmark_config_scale')\n",
+    "relabels = {\n",
+    "    'machine_instance_hostinfo_Hostname': 'host',\n",
+    "    'benchmark_config_scale': 'scale',\n",
+    "    'machine_instance_hostinfo_KernelRelease': 'kernel',\n",
+    "    'machine_disk_block_device_settings_nr_hw_queues': '#hwq',\n",
+    "    'machine_disk_block_device_settings_nr_requests': 'nr_requests',\n",
+    "    'machine_disk_block_device_settings_queue_depth': 'queue_depth',\n",
+    "    'machine_disk_block_device_settings_scheduler': 'scheduler',\n",
+    "    'postgres.gucs.set_gucs.huge_pages': 'huge_pages',\n",
+    "}\n",
+    "\n",
+    "figure = plt.figure(figsize=(15,40))\n",
+    "benchart.part(SubGridSpecRenderer(figure, relabels), 'machine_instance_hostinfo_Hostname', \n",
+    "              'machine_instance_type', 'machine_disk_size_gb')\n",
+    "\n",
+    "benchart.part(SubGridSpecRenderer(figure, relabels), 'benchmark_config_scale')\n",
+    "benchart.part(SubGridSpecRenderer(figure, relabels), 'benchmark_large_read')\n",
+    "\n",
     "benchart.ignore('machine_instance_hostinfo_KernelRelease',\n",
     "                'machine_disk_block_device_settings_nr_hw_queues',\n",
     "                'machine_disk_block_device_settings_nr_requests',\n",
@@ -43,19 +60,7 @@
     "                'machine_disk_block_device_settings_scheduler',\n",
     "                'postgres.gucs.set_gucs.huge_pages')\n",
     "\n",
-    "root = benchart.run()\n",
-    "\n",
-    "\n",
-    "figure = plt.figure(figsize=(15,30))\n",
-    "size = figure.get_size_inches()\n",
-    "renderers = [\n",
-    "        GridSpecRenderer(figure),\n",
-    "        SubGridSpecRenderer(figure),\n",
-    "        AxesRenderer(figure),\n",
-    "        PlotRenderer(figure),\n",
-    "        ]\n",
-    "\n",
-    "renderers[0](renderers[1:], root)"
+    "render(benchart, figure, relabels)\n"
    ]
   }
  ],
