--- a/all.ipynb
+++ b/all.ipynb
@@ -18,20 +18,23 @@
     "import os\n",
     "from benchart import BenchArt, Run\n",
     "from metadata import RunMetadata\n",
-    "from loader import flatten, extract, normalize\n",
+    "from loader import Loader\n",
     "\n",
+    "def discard_large_read(all_data):\n",
+    "    large_read = all_data['metadata']['benchmark'].get('large_read', None)\n",
+    "    if large_read is None or large_read == '' or large_read == 'none':\n",
+    "        return False\n",
+    "    return True\n",
     "\n",
-    "results_dir='run_data2'\n",
-    "runs = []\n",
-    "for i, datafile in enumerate(os.listdir(results_dir)):\n",
-    "    all_data = extract(os.path.join(results_dir, datafile))\n",
-    "    data = all_data['data']['pgbench']['progress']\n",
-    "    metadata = all_data['metadata']\n",
-    "    runs.append(\n",
-    "        Run(i + 1, data, RunMetadata(flatten(metadata)), os.path.join(results_dir, datafile))\n",
-    "    )\n",
+    "def data_def(all_data):\n",
+    "    return all_data['data']['pgbench']['progress']\n",
     "\n",
-    "normalize(runs)\n",
+    "def metadata_def(all_data):\n",
+    "    return all_data['metadata']\n",
+    "\n",
+    "loader = Loader('run_data2')\n",
+    "loader.discard(discard_large_read)\n",
+    "runs = loader.run(data_def, metadata_def)\n",
     "\n",
     "benchart = BenchArt(runs)\n",
     "\n",
@@ -46,9 +49,17 @@
     "    'postgres.gucs.set_gucs.huge_pages': 'huge_pages',\n",
     "}\n",
     "\n",
-    "figure = plt.figure(figsize=(15,40))\n",
-    "benchart.part(SubGridSpecRenderer(figure, relabels), 'machine_instance_hostinfo_Hostname', \n",
-    "              'machine_instance_type', 'machine_disk_size_gb')\n",
+    "figure = plt.figure(figsize=(15,40), constrained_layout=True)\n",
+    "\n",
+    "\n",
+    "disk_identifier = ['machine_disk_limits_burst_iops',\n",
+    "                   'machine_disk_limits_iops', 'machine_disk_limits_size',\n",
+    "                   'machine_disk_limits_burst_bw_mbps',\n",
+    "                   'machine_disk_limits_bw_mbps', 'machine_disk_size_gb', ]\n",
+    "\n",
+    "benchart.part(SubGridSpecRenderer(figure, relabels), 'machine_instance_hostinfo_Hostname',\n",
+    "              'machine_instance_type', *disk_identifier)\n",
+    "\n",
     "\n",
     "benchart.part(SubGridSpecRenderer(figure, relabels), 'benchmark_config_scale')\n",
     "benchart.part(SubGridSpecRenderer(figure, relabels), 'benchmark_large_read')\n",
@@ -60,7 +71,7 @@
     "                'machine_disk_block_device_settings_scheduler',\n",
     "                'postgres.gucs.set_gucs.huge_pages')\n",
     "\n",
-    "render(benchart, figure, relabels)\n"
+    "gs = render(benchart, figure, relabels)\n"
    ]
   }
  ],
