Change from nested gridspec to nested subfigures
Add RenderJSON

--- a/all.ipynb
+++ b/all.ipynb
@@ -3,6 +3,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b48e3caf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "from IPython.core.display import display, HTML\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "class RenderJSON:\n",
+    "    def __init__(self, json_data):\n",
+    "        if isinstance(json_data, dict):\n",
+    "            self.json_str = json.dumps(json_data)\n",
+    "        else:\n",
+    "            self.json_str = json_data\n",
+    "        self.uuid = str(uuid.uuid4())\n",
+    "        \n",
+    "    def _ipython_display_(self):\n",
+    "        display(HTML('<div id=\"{}\" style=\"height: auto; width:100%;\"></div>'.format(self.uuid)))\n",
+    "        display(HTML(\"\"\"<script>\n",
+    "        require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {\n",
+    "          renderjson.set_show_to_level(1)\n",
+    "          document.getElementById('%s').appendChild(renderjson(%s))\n",
+    "        });</script>\n",
+    "        \"\"\" % (self.uuid, self.json_str)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a6b35b3",
    "metadata": {
     "scrolled": false
@@ -13,8 +43,7 @@
     "%autoreload 2\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "from renderer import SubGridSpecRenderer, GridSpecRenderer, AxesRenderer, \\\n",
-    "PlotRenderer, render\n",
+    "from renderer import render, SubfigureRenderer\n",
     "import os\n",
     "from benchart import BenchArt, Run\n",
     "from metadata import RunMetadata\n",
@@ -26,14 +55,40 @@
     "        return False\n",
     "    return True\n",
     "\n",
+    "def discard_not_large_read(all_data):\n",
+    "    large_read = all_data['metadata']['benchmark'].get('large_read', None)\n",
+    "    if large_read is None or large_read == '' or large_read == 'none':\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def discard_most(all_data):\n",
+    "    hostname = all_data['metadata']['machine']['instance']['hostinfo']['Hostname']\n",
+    "    if hostname != 'vm-6':\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def discard_ultra(all_data):\n",
+    "    disk_kind = all_data['metadata']['machine']['disk']['limits']['size']\n",
+    "    return disk_kind == 'ultra1024'\n",
+    "\n",
+    "def discard_not_ultra(all_data):\n",
+    "    disk_kind = all_data['metadata']['machine']['disk']['limits']['size']\n",
+    "    return disk_kind != 'ultra1024'\n",
+    "\n",
     "def data_def(all_data):\n",
     "    return all_data['data']['pgbench']['progress']\n",
     "\n",
     "def metadata_def(all_data):\n",
     "    return all_data['metadata']\n",
     "\n",
+    "\n",
     "loader = Loader('run_data2')\n",
     "loader.discard(discard_large_read)\n",
+    "# loader.discard(discard_not_large_read)\n",
+    "\n",
+    "# loader.discard(discard_not_ultra)\n",
+    "# loader.discard(discard_most)\n",
+    "loader.discard(discard_ultra)\n",
     "runs = loader.run(data_def, metadata_def)\n",
     "\n",
     "benchart = BenchArt(runs)\n",
@@ -47,22 +102,27 @@
     "    'machine_disk_block_device_settings_queue_depth': 'queue_depth',\n",
     "    'machine_disk_block_device_settings_scheduler': 'scheduler',\n",
     "    'postgres.gucs.set_gucs.huge_pages': 'huge_pages',\n",
+    "    'machine_disk_limits_size': 'disk_kind',\n",
+    "    'machine_disk_size_gb': 'disk_size_gb',\n",
+    "    'machine_instance_hostinfo_Hostname': 'host',\n",
+    "    'machine_instance_type': 'instance_type',\n",
+    "    'benchmark_config_scale': 'pgbench_scale',\n",
     "}\n",
     "\n",
-    "figure = plt.figure(figsize=(15,40), constrained_layout=True)\n",
-    "\n",
-    "\n",
+    "figure = plt.figure(figsize=(15,80), constrained_layout=True)\n",
+    "figure.suptitle('pgbench')\n",
+    "figure.supylabel('tps', fontsize=16)\n",
     "disk_identifier = ['machine_disk_limits_burst_iops',\n",
     "                   'machine_disk_limits_iops', 'machine_disk_limits_size',\n",
     "                   'machine_disk_limits_burst_bw_mbps',\n",
     "                   'machine_disk_limits_bw_mbps', 'machine_disk_size_gb', ]\n",
     "\n",
-    "benchart.part(SubGridSpecRenderer(figure, relabels), 'machine_instance_hostinfo_Hostname',\n",
+    "benchart.part(SubfigureRenderer(relabels), 'machine_instance_hostinfo_Hostname',\n",
     "              'machine_instance_type', *disk_identifier)\n",
     "\n",
     "\n",
-    "benchart.part(SubGridSpecRenderer(figure, relabels), 'benchmark_config_scale')\n",
-    "benchart.part(SubGridSpecRenderer(figure, relabels), 'benchmark_large_read')\n",
+    "benchart.part(SubfigureRenderer(relabels), 'benchmark_config_scale')\n",
+    "# benchart.part(SubfigureRenderer(relabels), 'benchmark_large_read')\n",
     "\n",
     "benchart.ignore('machine_instance_hostinfo_KernelRelease',\n",
     "                'machine_disk_block_device_settings_nr_hw_queues',\n",
@@ -71,7 +131,8 @@
     "                'machine_disk_block_device_settings_scheduler',\n",
     "                'postgres.gucs.set_gucs.huge_pages')\n",
     "\n",
-    "gs = render(benchart, figure, relabels)\n"
+    "result = render(benchart, figure, relabels)\n",
+    "RenderJSON(result)"
    ]
   }
  ],
