Refactor discards into separate file

--- a/all.ipynb
+++ b/all.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48e3caf",
+   "id": "8ef315f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,35 +45,9 @@
     "import matplotlib.pyplot as plt\n",
     "from renderer import render, SubfigureRenderer\n",
     "import os\n",
-    "from benchart import BenchArt, Run\n",
-    "from metadata import RunMetadata\n",
+    "from benchart import BenchArt\n",
     "from loader import Loader\n",
-    "\n",
-    "def discard_large_read(all_data):\n",
-    "    large_read = all_data['metadata']['benchmark'].get('large_read', None)\n",
-    "    if large_read is None or large_read == '' or large_read == 'none':\n",
-    "        return False\n",
-    "    return True\n",
-    "\n",
-    "def discard_not_large_read(all_data):\n",
-    "    large_read = all_data['metadata']['benchmark'].get('large_read', None)\n",
-    "    if large_read is None or large_read == '' or large_read == 'none':\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def discard_most(all_data):\n",
-    "    hostname = all_data['metadata']['machine']['instance']['hostinfo']['Hostname']\n",
-    "    if hostname != 'vm-6':\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "def discard_ultra(all_data):\n",
-    "    disk_kind = all_data['metadata']['machine']['disk']['limits']['size']\n",
-    "    return disk_kind == 'ultra1024'\n",
-    "\n",
-    "def discard_not_ultra(all_data):\n",
-    "    disk_kind = all_data['metadata']['machine']['disk']['limits']['size']\n",
-    "    return disk_kind != 'ultra1024'\n",
+    "from discards import *\n",
     "\n",
     "def data_def(all_data):\n",
     "    return all_data['data']['pgbench']['progress']\n",
@@ -81,14 +55,10 @@
     "def metadata_def(all_data):\n",
     "    return all_data['metadata']\n",
     "\n",
+    "loader = Loader('run_data_pg')\n",
     "\n",
-    "loader = Loader('run_data2')\n",
-    "loader.discard(discard_large_read)\n",
-    "# loader.discard(discard_not_large_read)\n",
+    "loader.discard(discard_disk_vm, disk='p30', vm='Standard_D16ds_v4', invert=True)\n",
     "\n",
-    "# loader.discard(discard_not_ultra)\n",
-    "# loader.discard(discard_most)\n",
-    "loader.discard(discard_ultra)\n",
     "runs = loader.run(data_def, metadata_def)\n",
     "\n",
     "benchart = BenchArt(runs)\n",
@@ -109,7 +79,7 @@
     "    'benchmark_config_scale': 'pgbench_scale',\n",
     "}\n",
     "\n",
-    "figure = plt.figure(figsize=(15,80), constrained_layout=True)\n",
+    "figure = plt.figure(figsize=(15,20), constrained_layout=True)\n",
     "figure.suptitle('pgbench')\n",
     "figure.supylabel('tps', fontsize=16)\n",
     "disk_identifier = ['machine_disk_limits_burst_iops',\n",
@@ -120,19 +90,35 @@
     "benchart.part(SubfigureRenderer(relabels), 'machine_instance_hostinfo_Hostname',\n",
     "              'machine_instance_type', *disk_identifier)\n",
     "\n",
-    "\n",
+    "benchart.part(SubfigureRenderer(relabels), 'machine_disk_caching')\n",
+    "benchart.part(SubfigureRenderer(relabels), 'benchmark_large_read')\n",
     "benchart.part(SubfigureRenderer(relabels), 'benchmark_config_scale')\n",
-    "# benchart.part(SubfigureRenderer(relabels), 'benchmark_large_read')\n",
+    "benchart.part(SubfigureRenderer(relabels), 'postgres_load_data')\n",
     "\n",
     "benchart.ignore('machine_instance_hostinfo_KernelRelease',\n",
     "                'machine_disk_block_device_settings_nr_hw_queues',\n",
     "                'machine_disk_block_device_settings_nr_requests',\n",
     "                'machine_disk_block_device_settings_queue_depth',\n",
     "                'machine_disk_block_device_settings_scheduler',\n",
-    "                'postgres.gucs.set_gucs.huge_pages')\n",
+    "                'postgres.gucs.set_gucs.huge_pages',\n",
+    "                 'benchmark_config_time')\n",
     "\n",
-    "result = render(benchart, figure, relabels)\n",
-    "RenderJSON(result)"
+    "timebound = 20\n",
+    "root, title = render(benchart, figure, timebound, relabels)\n",
+    "RenderJSON(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95a6e729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io_pg_charter import *\n",
+    "\n",
+    "paths = get_pg_io_paths(list(run.filename for run in root.iterruns()))\n",
+    "print(paths)"
    ]
   }
  ],
