update jupyter notebook

--- a/all.ipynb
+++ b/all.ipynb
@@ -55,7 +55,7 @@
     "def metadata_def(all_data):\n",
     "    return all_data['metadata']\n",
     "\n",
-    "loader = Loader('run_data_pg')\n",
+    "loader = Loader('run_data')\n",
     "\n",
     "loader.discard(discard_disk_vm, disk='p30', vm='Standard_D16ds_v4', invert=True)\n",
     "\n",
@@ -79,13 +79,35 @@
     "    'benchmark_config_scale': 'pgbench_scale',\n",
     "}\n",
     "\n",
+    "ignores = ['machine_instance_hostinfo_KernelRelease',\n",
+    "                'machine_disk_block_device_settings_nr_hw_queues',\n",
+    "                'machine_disk_block_device_settings_nr_requests',\n",
+    "                'machine_disk_block_device_settings_queue_depth',\n",
+    "                'machine_disk_block_device_settings_scheduler']\n",
+    "\n",
+    "occludes=set(['benchmark_config_time', \n",
+    "              'postgres_load_data',\n",
+    "              'postgres_init',\n",
+    "              'postgres_version',\n",
+    "              'postgres_gucs_set_gucs_huge_pages',\n",
+    "              'machine_disk_limits_burst_iops',\n",
+    "              'machine_disk_trim',\n",
+    "              'machine_disk_limits_iops',\n",
+    "              'machine_disk_limits_burst_bw_mbps',\n",
+    "              'machine_disk_limits_bw_mbps',\n",
+    "              'machine_instance_limits_uncached_burst_iops',\n",
+    "              'machine_instance_limits_uncached_iops',\n",
+    "              'machine_instance_limits_uncached_burst_bw_mbps',\n",
+    "              'machine_instance_limits_uncached_bw_mbps',\n",
+    "              'machine_instance_mem_total_bytes',\n",
+    "             ])\n",
+    "\n",
     "figure = plt.figure(figsize=(15,20), constrained_layout=True)\n",
     "figure.suptitle('pgbench')\n",
     "figure.supylabel('tps', fontsize=16)\n",
-    "disk_identifier = ['machine_disk_limits_burst_iops',\n",
-    "                   'machine_disk_limits_iops', 'machine_disk_limits_size',\n",
-    "                   'machine_disk_limits_burst_bw_mbps',\n",
-    "                   'machine_disk_limits_bw_mbps', 'machine_disk_size_gb', ]\n",
+    "\n",
+    "disk_identifier = ['machine_disk_size_gb', 'machine_disk_limits_size']\n",
+    "\n",
     "\n",
     "benchart.part(SubfigureRenderer(relabels), 'machine_instance_hostinfo_Hostname',\n",
     "              'machine_instance_type', *disk_identifier)\n",
@@ -93,32 +115,12 @@
     "benchart.part(SubfigureRenderer(relabels), 'machine_disk_caching')\n",
     "benchart.part(SubfigureRenderer(relabels), 'benchmark_large_read')\n",
     "benchart.part(SubfigureRenderer(relabels), 'benchmark_config_scale')\n",
-    "benchart.part(SubfigureRenderer(relabels), 'postgres_load_data')\n",
     "\n",
-    "benchart.ignore('machine_instance_hostinfo_KernelRelease',\n",
-    "                'machine_disk_block_device_settings_nr_hw_queues',\n",
-    "                'machine_disk_block_device_settings_nr_requests',\n",
-    "                'machine_disk_block_device_settings_queue_depth',\n",
-    "                'machine_disk_block_device_settings_scheduler',\n",
-    "                'postgres.gucs.set_gucs.huge_pages',\n",
-    "                 'benchmark_config_time')\n",
+    "benchart.ignore(*ignores, *occludes)\n",
     "\n",
     "timebound = 20\n",
-    "root, title = render(benchart, figure, timebound, relabels)\n",
+    "root, title = render(benchart, figure, timebound, relabels, occludes)\n",
     "RenderJSON(title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95a6e729",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from io_pg_charter import *\n",
-    "\n",
-    "paths = get_pg_io_paths(list(run.filename for run in root.iterruns()))\n",
-    "print(paths)"
    ]
   }
  ],
