Update requirements and remove deprecated import

--- a/all.ipynb
+++ b/all.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import uuid\n",
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "import json\n",
     "\n",
